fix minor layout issues

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -7,8 +7,7 @@
   border-radius: 8px;
   box-sizing: border-box;
   padding: 32px;
-  margin: 2vh;
-  margin-left: 0;
+  margin: 2vh 0;
 }
 
 .card__full {
